aws-sdk-compile-checks-usage/tests/fails/attributes_unknown_sdk.stderr
error: some of the SDKs you specified do not exist in our list of supported SDKs: unknown
 --> tests/fails/attributes_unknown_sdk.rs:3:1
  |
3 | #[required_props(sdk = unknown)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `required_props` (in Nightly builds, run with -Z macro-backtrace for more info)
